# ZinxFrameCreate

./: .gitignore  README.md
01/: CMakeLists.txt
01/include/: stdinchannel.hpp  zinxkernel.hpp
01/src/: main.cpp  stdinchannel.cpp  zinxkernel.cpp
02/: CMakeLists.txt
02/include/: fifochannel.hpp  stdinchannel.hpp  zinxkernel.hpp
02/src/: fifochannel.cpp  ichannel.cpp  main.cpp  stdinchannel.cpp  stdoutchannel.cpp  zinxkernel.cpp
03/: CMakeLists.txt
03/include/: ichannel.hpp  stdinchannel.hpp  stdoutchannel.hpp  upper.hpp
03/src/: main.cpp  stdinchannel.cpp  upper.cpp
04/: CMakeLists.txt
04/include/: zinxhandler.hpp
04/src/: main.cpp  zinxhandler.cpp
05/: CMakeLists.txt
05/include/: ichannel.hpp  stdinchannel.hpp  stdoutchannel.hpp  upper.hpp  zinxhandler.hpp
05/src/: ichannel.cpp  main.cpp  stdinchannel.cpp  stdoutchannel.cpp  upper.cpp  zinxhandler.cpp  zinxkernel.cpp
ZinxTCPCon/: CMakeLists.txt
ZinxTCPCon/include/: zinx.h  zinxtcpconnect.h
ZinxTCPCon/src/: zinxtcpconnect.cpp
